<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="get_started">Get Started</string>
    <string name="app_name">Musium</string>
    <string name="todo">null</string>
    <string name="let_get_you_in">Let\'s get you in</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_apple">Continue with Apple</string>
    <string name="or">or</string>
    <string name="login_with_password">Login with password</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up\n</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="login">Login</string>
    <string name="or_continue_with">or continue with</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
</resources>